WP-8341 Fixes to the megamenu, search box alignment, font face and size

--- a/sass/partials/design/_design.sass
+++ b/sass/partials/design/_design.sass
@@ -32,8 +32,8 @@
   .svg &
     background: image_url("logo.svg") no-repeat
     background-size: 96.8%
-    height: 76px
-    width: 275px
+    height: 45px
+    width: 159px
   .no-js &,
   .no-svg &
     background: image_url("logo-2015-05-26-1.png") no-repeat
